Add Simon Baynes as a supporter

--- a/index.html
+++ b/index.html
@@ -290,6 +290,11 @@
               <td>Project</td>
               <td>Development; open-source community efforts</td>
             </tr>
+            <tr>
+              <td><a href="http://bayn.es/">Simon Baynes</a></td>
+              <td>Individual</td>
+              <td><td>Development; open-source community efforts</td>
+            </tr>
           </tbody>
         </table>
 
